--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ body {
   background-color: #333;
   color: whitesmoke;
 }
+.wrapper {
+  max-width: 1024;
+  margin: 0 auto;
+  text-align: center;
+}
