--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
   background-color: #333;
-  color: whitesmoke;
+  color: rgb(241, 86, 86);
 }
 .wrapper {
   max-width: 1024;
   margin: 0 auto;
   text-align: center;
-  color: gold;
+  color: rgb(248, 216, 35);
   font-size: 25px;
 }
